--- a/myproject/myapp4/templates/myapp4/user_form.html
+++ b/myproject/myapp4/templates/myapp4/user_form.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'myapp4/base.html' %}
 
 {% block content %}
-    {{ form }}
+<form action="" method="post">
+    {% csrf_token %}
+     {{ form }}
+    <input type="submit" value="отправить">
+</form>
 {% endblock %}
 
 
