--- a/myproject/myapp3/templates/myapp3/index.html
+++ b/myproject/myapp3/templates/myapp3/index.html
@@ -6,11 +6,14 @@
 
 {% block content %}
     <div class="container">
-        <h2>Шаблон<br></h2>
-        <p>— за последние 7 дней (неделю)<br>
-            — за последние 30 дней (месяц)<br>
-            — за последние 365 дней (год)<br>
-        Товары в списке не повторятся.</p>
+        <h1>Урок 3. Работа с представлениями и шаблонами</h1>
+        <h2>Задание</h2>
+        <p>Продолжаем работать с товарами и заказами. <br>
+        Создайте шаблон, который выводит список заказанных клиентом товаров из всех его заказов с сортировкой по времени:<br>
+        — за последние 7 дней (неделю)<br>
+        — за последние 30 дней (месяц)<br>
+        — за последние 365 дней (год)<br>
+        Товары в списке не должны повторятся.</p>
         <hr>
         <a href='{% url "all_orders" %}'>Заказы</a>
     </div>
