--- a/myproject/myapp3/templates/myapp3/base.html
+++ b/myproject/myapp3/templates/myapp3/base.html
@@ -1,14 +1,26 @@
-<!doctype html>
-<html lang=ru>
+<!DOCTYPE html>
+{% load static %}
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+    <title>{% block title %}Главная страница{% endblock %}</title>
 </head>
 <body>
-        {% block content %} {% endblock %}
+
+    <div class="container-fluid">
+        <ul class="nav nav-pills justify-content-end align-items-end">
+
+    </ul>
+    </div>
+    <div class="content">
+        {% block content %}{% endblock  %}
+    </div>
+
+    <div class="footer">
+
+    </div>
 </body>
 </html>
